ENYO-2384: Further prevention of any gap between transitioning panels.
Enyo-DCO-1.1-Signed-off-by: Aaron Tam <aaron.tam@lge.com>

--- a/src/LightPanels/LightPanels.css
+++ b/src/LightPanels/LightPanels.css
@@ -43,11 +43,13 @@
 .enyo-light-panels.horizontal.forwards .panels-container > .next,
 .enyo-light-panels.horizontal.backwards .panels-container > .previous {
 	left: 50%;
+	margin-left: -1px;
 }
 
 .enyo-light-panels.horizontal.backwards .panels-container > .next,
 .enyo-light-panels.horizontal.forwards .panels-container > .previous {
 	right: 50%;
+	margin-right: -1px;
 }
 
 .enyo-light-panels.vertical.forwards .panels-container > .next,
